--- a/app/src/main/res/layout/medication_addconfirmation.xml
+++ b/app/src/main/res/layout/medication_addconfirmation.xml
@@ -10,51 +10,80 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="412dp"
-        android:layout_height="384dp"
-        app:srcCompat="@drawable/logo"
-        tools:layout_editor_absoluteX="-1dp"
-        tools:layout_editor_absoluteY="51dp" />
+        android:layout_width="311dp"
+        android:layout_height="326dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginBottom="11dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="86dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="87dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/appname"
         android:textColor="@color/yellow"
         android:textSize="15pt"
-        tools:layout_editor_absoluteX="91dp"
-        tools:layout_editor_absoluteY="446dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="318dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="147dp"
         android:text="@string/confirm"
-        android:textColor="@color/yellow"
-        android:textSize="11pt"
+        android:textAlignment="center"
 
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="651dp" />
+        android:textColor="@color/yellow"
+        android:textSize="8pt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
+        android:layout_width="144dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="40dp"
+
+
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="39dp"
         android:backgroundTint="@color/material_on_background_disabled"
         android:text="@string/cancel"
-
-
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="778dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintVertical_bias="0.407" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="144dp"
-        android:layout_height="57dp"
-        android:text="@string/yes"
-        android:backgroundTint="@color/yellow"
+        android:layout_height="55dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="40dp"
 
-        tools:layout_editor_absoluteX="251dp"
-        tools:layout_editor_absoluteY="778dp" />
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="42dp"
+        android:backgroundTint="@color/yellow"
+        android:text="@string/yes"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintVertical_bias="0.458" />
 </androidx.constraintlayout.widget.ConstraintLayout>
