--- a/app/src/main/res/layout/medication.xml
+++ b/app/src/main/res/layout/medication.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,35 +8,15 @@
     android:layout_height="match_parent"
     android:background="@color/blue">
 
-    <EditText
-        android:id="@+id/editTextTextMultiLine"
-        android:layout_width="412dp"
-        android:layout_height="61dp"
-        android:backgroundTint="@color/yellow"
-        android:ems="10"
-
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="67dp" />
-
-    <EditText
-        android:id="@+id/editTextTextMultiLine2"
-        android:layout_width="420dp"
-        android:layout_height="52dp"
-        android:backgroundTint="@color/yellow"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        tools:layout_editor_absoluteX="-6dp" />
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="84dp"
         android:layout_height="62dp"
         app:srcCompat="@drawable/logo"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="63dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
@@ -44,9 +24,23 @@
         android:layout_height="wrap_content"
         android:text="@string/hello_administrator"
         android:textColor="@color/white"
-        android:textSize='6.5pt'
-        tools:layout_editor_absoluteX="58dp"
-        tools:layout_editor_absoluteY="92dp" />
+        android:textSize="6.5pt"
+        app:layout_constraintStart_toEndOf="@id/imageView"
+        app:layout_constraintTop_toTopOf="@id/imageView"
+        android:layout_marginStart="8dp" />
+
+    <EditText
+        android:id="@+id/editTextTextMultiLine"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/yellow"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView" />
 
     <TextView
         android:id="@+id/textView4"
@@ -55,44 +49,53 @@
         android:text="@string/medication"
         android:textColor="@color/yellow"
         android:textSize="15pt"
-        tools:layout_editor_absoluteX="116dp"
-        tools:layout_editor_absoluteY="158dp" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextTextMultiLine"
+        android:layout_marginStart="16dp" />
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="389dp"
-        android:layout_height="100dp"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="243dp" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+        android:layout_marginHorizontal="16dp" />
 
     <LinearLayout
-        android:layout_width="388dp"
-        android:layout_height="102dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteX="11dp"
-        tools:layout_editor_absoluteY="715dp">
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginHorizontal="16dp">
 
         <Button
             android:id="@+id/button6"
-            android:layout_width="123dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:backgroundTint="@color/yellow"
             android:text="@string/add" />
 
-
         <Button
             android:id="@+id/button4"
-            android:layout_width="123dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:backgroundTint="@color/yellow"
             android:text="@string/update" />
 
         <Button
             android:id="@+id/button"
-            android:layout_width="123dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:backgroundTint="@color/yellow"
-
             android:text="@string/delete" />
     </LinearLayout>
 
