Generating food list, will add removed files when working with them

--- a/app/src/main/res/drawable/transparent_signup_button.xml
+++ b/app/src/main/res/drawable/transparent_signup_button.xml
@@ -6,4 +6,7 @@
     <stroke
         android:width="2dp"
         android:color="@color/yellow" />
+    <corners
+        android:radius = "8dp"/>
+
 </shape>
