--- a/app/src/main/res/layout-land/update_profile.xml
+++ b/app/src/main/res/layout-land/update_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/blue"
     android:fillViewport="true"
-    tools:context=".activities.SignupActivity">
+    tools:context=".activities.UpdateProfileActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,90 +16,60 @@
         <!-- Header -->
         <ImageView
             android:id="@+id/imageView_logo"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:contentDescription="@string/app_name"
             android:scaleType="centerInside"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/logo" />
 
         <TextView
-            android:id="@+id/textView_signupTitle"
+            android:id="@+id/textView_updateTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/signup"
+            android:layout_marginStart="16dp"
+            android:text="Update Profile Details"
             android:textColor="@color/yellow"
-            android:textSize="25sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView_logo" />
+            android:textSize="24sp"
+            app:layout_constraintStart_toEndOf="@+id/imageView_logo"
+            app:layout_constraintTop_toTopOf="@+id/imageView_logo"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView_logo"/>
 
-        <!-- User Type Selection -->
-        <RadioGroup
-            android:id="@+id/radioGroup_userType"
-            android:layout_width="0dp"
+        <!-- Guideline to split form -->
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView_signupTitle">
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
 
-            <RadioButton
-                android:id="@+id/radioButton_student"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/radio_button_selector"
-                android:button="@android:color/transparent"
-                android:checked="true"
-                android:gravity="center"
-                android:padding="12dp"
-                android:text="@string/student"
-                android:textColor="@drawable/radio_text_color"
-                android:textSize="18sp" />
-
-            <RadioButton
-                android:id="@+id/radioButton_nurse"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/radio_button_selector"
-                android:button="@android:color/transparent"
-                android:gravity="center"
-                android:padding="12dp"
-                android:text="@string/nurse"
-                android:textColor="@drawable/radio_text_color"
-                android:textSize="18sp" />
-        </RadioGroup>
-
-        <!-- Common Fields -->
+        <!-- Left Column -->
         <EditText
             android:id="@+id/editText_firstName"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_edittext_background"
             android:hint="@string/first_name"
             android:inputType="textPersonName"
             android:padding="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/radioGroup_userType" />
+            app:layout_constraintTop_toBottomOf="@id/imageView_logo" />
 
         <EditText
             android:id="@+id/editText_lastName"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_edittext_background"
             android:hint="@string/last_name"
             android:inputType="textPersonName"
             android:padding="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editText_firstName" />
 
@@ -109,14 +79,16 @@
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_edittext_background"
             android:hint="@string/staff_no"
             android:inputType="number"
             android:padding="8dp"
             android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/editText_lastName" />
+            app:layout_constraintTop_toBottomOf="@id/editText_lastName"
+            tools:visibility="visible" />
 
         <!-- Student Specific Fields -->
         <LinearLayout
@@ -125,7 +97,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/editText_staffNo"
             tools:visibility="visible">
@@ -179,31 +152,32 @@
             </RadioGroup>
         </LinearLayout>
 
-        <!-- Common Fields Continued -->
+        <!-- Right Column -->
         <EditText
             android:id="@+id/editText_username"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/rounded_edittext_background"
             android:hint="@string/username"
             android:inputType="textPersonName"
             android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/layout_studentFields" />
+            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
+            app:layout_constraintTop_toTopOf="@id/editText_firstName" />
 
         <EditText
             android:id="@+id/editText_password"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
             android:background="@drawable/rounded_edittext_background"
             android:hint="@string/Password"
             android:inputType="textPassword"
             android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
             app:layout_constraintTop_toBottomOf="@id/editText_username" />
 
         <!-- Buttons -->
@@ -218,9 +192,9 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             app:cornerRadius="20dp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_buttons"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText_password" />
+            app:layout_constraintTop_toBottomOf="@+id/layout_studentFields" />
 
         <Button
             android:id="@+id/button_cancel"
@@ -234,14 +208,7 @@
             app:cornerRadius="20dp"
             app:layout_constraintBaseline_toBaselineOf="@id/button_confirm"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/guideline_buttons" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_buttons"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5" />
+            app:layout_constraintStart_toEndOf="@+id/guideline_vertical" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
