--- a/app/src/main/res/layout/food_list_view.xml
+++ b/app/src/main/res/layout/food_list_view.xml
@@ -61,7 +61,7 @@
         android:id="@+id/bottomHeaderLine"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="#FFC107"
+        android:background="@color/yellow"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/logoImageView"
         app:layout_constraintStart_toStartOf="parent"
@@ -129,7 +129,7 @@
                 android:textSize="16sp"
                 android:gravity="center"
                 android:layout_marginBottom="12dp"
-                tools:text="KOO" />
+                tools:text="@string/koo" />
 
             <!-- Type Row -->
             <TextView
@@ -142,7 +142,7 @@
                 android:textSize="16sp"
                 android:gravity="center"
                 android:layout_marginBottom="12dp"
-                tools:text="Beans" />
+                tools:text="@string/beans" />
 
             <!-- Quantity Row -->
             <TextView
