--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -13,31 +13,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
+        android:gravity="center"
+        android:padding="16dp"
         android:textColor="@color/blue"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:gravity="center"
-        android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/logoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log Out"
-        android:textColor="@color/white"
+        android:layout_marginTop="192dp"
         android:background="@drawable/rounded_button_background"
         android:paddingStart="24dp"
-        android:paddingEnd="24dp"
         android:paddingTop="12dp"
+        android:paddingEnd="24dp"
         android:paddingBottom="12dp"
+        android:text="Log Out"
+        android:textColor="@color/white"
         android:textSize="16sp"
-        android:layout_marginTop="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />
+
+    <Button
+        android:id="@+id/viewFoodButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/view_foodlist"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logoutButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
